# falcon

./: .gitignore  .pre-commit-config.yaml  Agents.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  TASKS-mapgen.md  TASKS-relief-map.md  TASKS.md  rustfmt.toml  shadow_scale_strategy_game_concept_technical_plan_v_0.md
.github/: copilot-instructions.md
.serena/: project.yml
cli_inspector/: Cargo.toml
cli_inspector/src/: app.rs  main.rs  ui.rs
clients/godot_thin_client/native/: Cargo.toml  shadow_scale_godot.gdextension  shadow_scale_godot.gdextension.uid
clients/godot_thin_client/native/src/: lib.rs  runtime.rs
clients/godot_thin_client/native/src/bridge/: command.rs  decoder.rs  mod.rs  script_host.rs  variant.rs
clients/godot_thin_client/native/src/dict/: campaign.rs  culture.rs  economy.rs  governance.rs  knowledge.rs  map.rs  mod.rs  population.rs  subsistence.rs
clients/godot_thin_client/native/src/snapshot/: delta.rs  mod.rs  raster.rs
core_sim/: CLAUDE.md  Cargo.toml  build.rs
core_sim/benchmarks/: README.md  power_bench.rs  turn_bench.rs
core_sim/src/: biome_palette.rs  climate.rs  combat_config.rs  components.rs  creatures_config.rs  crisis.rs  crisis_config.rs  culture.rs  culture_corruption_config.rs  demographics_config.rs  espionage.rs  expedition_config.rs  fauna.rs  fauna_config.rs  flora_config.rs  food.rs  forage.rs  generations.rs  graze.rs  great_discovery.rs  grid_utils.rs  hashing.rs  heightfield.rs  hydrology.rs  influencers.rs  intensification.rs  knowledge_ledger.rs  labor_config.rs  lib.rs  log_stream.rs  map_preset.rs  mapgen.rs  metrics.rs  network.rs  orders.rs  port_alloc.rs  power.rs  provinces.rs  resources.rs  scalar.rs  (+18 more)
core_sim/src/combat/: mod.rs
core_sim/src/data/: beat_config.json  beat_definitions.json  combat_config.json  creatures.json  crisis_archetypes.json  crisis_modifiers.json  crisis_telemetry_config.json  culture_corruption_config.json  demographics_config.json  espionage_agents.json  espionage_config.json  espionage_missions.json  expedition_config.json  fauna_config.json  flora_config.json  great_discovery_definitions.json  influencer_config.json  intensification_ladder.json  knowledge_ledger_config.json  labor_config.json  map_presets.json  sedentarization_config.json  settlement_stage_config.json  simulation_config.json  sites_config.json  snapshot_overlays_config.json  start_profile_knowledge_tags.json  start_profiles.json  supply_network_config.json  turn_pipeline_config.json  victory_config.json  visibility_config.json  wellbeing_config.json
core_sim/src/snapshot/: campaign.rs  capture.rs  culture.rs  economy.rs  governance.rs  knowledge.rs  map.rs  mod.rs  population.rs  subsistence.rs  vision.rs
core_sim/src/systems/: expeditions.rs  labor.rs  mod.rs  population.rs  power.rs  trade.rs  worldgen.rs
core_sim/src/telling/: catalog.rs  config.rs  medium.rs  memory.rs  mod.rs  nouns.rs  predicate.rs  select.rs  signals.rs  stance.rs
core_sim/tests/: capability_gating.rs  climate_authority.rs  config_data_hygiene.rs  elevation_authority.rs  expedition_hunt.rs  fauna_coastal_habitat.rs  fauna_ecology.rs  fauna_follow.rs  fauna_hunt.rs  fauna_husbandry.rs  fauna_market.rs  fauna_migratory_range.rs  fauna_seal.rs  fauna_spawn.rs  fauna_wet_biome_roster.rs  fauna_wild_roster.rs  flora_commitment.rs  flora_roster.rs  forage_cultivation.rs  forage_field.rs  grazing_2b.rs  grazing_2b_convergence.rs  grazing_2d_pen.rs  grazing_f3_fodder.rs  hydrology_earthlike.rs  labor_allocation.rs  lake_abundance.rs  navigable_mouth_delta.rs  predators.rs  relief_sweep.rs  rollback_tended_survival.rs  sedentarization.rs  supply_network.rs  telling.rs  telling_fork.rs  telling_memory.rs  wondrous_sites.rs  worldgen_startup_idempotent.rs
core_sim/tests/telling_support/: mod.rs
docs/: Emergent Narrative.md  architecture.md  band_panel_ux_proposal.html  desktop_builds.md  ergonomics_survey_template.md  godot_inspector_plan.md  godot_thin_client_spike.md  integration_guide.md  metrics.md  plan_band_city_dock.md  plan_band_panel_wide_flow.md  plan_biome_coherence.md  plan_biome_palette.md  plan_civ_wellbeing.md  plan_climate_authority.md  plan_corral_managed_population.md  plan_early_game_labor.md  plan_elevation_authority.md  plan_exploration_and_sites.md  plan_flora_roster.md  plan_grazing_2b.md  plan_grazing_2d.md  plan_grazing_foundation.md  plan_hud_decomposition.md  plan_hud_nav_turn_orb.md  plan_intensification.md  plan_intensification_ladder.md  plan_predators.md  plan_rivers.md  plan_rivers_drainage_network.md  plan_settlement_population.md  plan_snapshot_and_systems_decomposition.md  plan_the_telling.md  plan_the_telling_book_ux.md  plan_tile_panel_layout.md  plan_trade_fow_integration.md  plan_trade_route_data_model.md  plan_wildlife_hunting_overlay.md  scripting_manifest.schema.json  windows_build.md
integration_tests/: Cargo.toml
integration_tests/tests/: biome_palette.rs  biome_speckle.rs  corruption.rs  determinism.rs  fauna_rollback.rs  forage_rollback.rs  graze_distribution.rs  great_discovery.rs  larder_runway.rs  map_fixture.rs  pen_food_ledger.rs  shelf_ratio.rs  smoke.rs  telling_rollback.rs  trade.rs  visibility.rs
integration_tests/tests/common/: mod.rs
integration_tests/tests/fixtures/: test_simulation_config.json
launcher/: Cargo.toml
launcher/src/: main.rs
scripts/: build_macos.sh  build_terrain_textures.sh  build_windows.sh  pre-commit-rust.sh  run_stack.sh
sim_proto/: Cargo.toml
sim_runtime/: Cargo.toml  README.md  build.rs
sim_runtime/proto/: command.proto
sim_runtime/src/: command_text.rs  commands.rs  lib.rs  scripting.rs
sim_schema/: Cargo.toml  README.md
sim_schema/schemas/: snapshot.fbs
sim_schema/src/: lib.rs  world.rs
sim_schema/src/codec/: campaign.rs  culture.rs  economy.rs  governance.rs  knowledge.rs  map.rs  mod.rs  population.rs  subsistence.rs  vision.rs
sim_schema/src/state/: campaign.rs  culture.rs  economy.rs  governance.rs  knowledge.rs  map.rs  mod.rs  population.rs  subsistence.rs
(+394 files in other folders)
