[package]
name = "cli_inspector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli_inspector"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
color-eyre = "0.6"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sim_proto = { path = "../sim_proto" }
