[package]
name = "cli_inspector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli_inspector"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
color-eyre = "0.6"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sim_proto = { path = "../sim_proto" }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
