[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false }
core_sim = { path = "../core_sim" }
sim_runtime = { path = "../sim_runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
