[package]
name = "sim_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "sim_runtime"
path = "src/lib.rs"

[dependencies]
sim_schema = { path = "../sim_schema" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
thiserror = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
