[package]
name = "sim_runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "sim_runtime"
path = "src/lib.rs"

[dependencies]
sim_schema = { path = "../sim_schema" }
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
thiserror = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
prost = "0.12"

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"
