[package]
name = "shadow_scale_godot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = { version = "0.4" }
shadow_scale_flatbuffers = { path = "../../../shadow_scale_flatbuffers" }
flatbuffers = "25.9.23"
quick-js = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
